--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+@layer utilities {
+.max-container {
+    @apply mx-auto max-w-[1440px];
+    }
+
+.padding-container {
+    @apply px-6 lg:px-20;
+    }
+
+}
